--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -40,3 +40,14 @@
   line-height: 18px;
   color: @grey--dark;
 }
+
+.page-footer--photo {
+  min-height: 284px;
+  display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+}
+
+.footer-photo__logo--photo {
+  align-self: center;
+}
