--- a/source/less/blocks/social-links.less
+++ b/source/less/blocks/social-links.less
@@ -1,11 +1,11 @@
-.social-links {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  min-width: 180px;
-  max-width: 50%;
-  margin-left: 40px;
-}
+// .social-links {
+//   display: flex;
+//   justify-content: center;
+//   flex-wrap: wrap;
+//   min-width: 180px;
+//   max-width: 50%;
+//   margin-left: 40px;
+// }
 
 @media (min-width: @desktop-width) {
   .social-links {
