--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,17 +18,16 @@
 @import "blocks/proof.less";
 @import "blocks/reviews.less";
 @import "blocks/slider.less";
-
 @import "blocks/price.less";
 @import "blocks/price-table.less";
 @import "blocks/contacts.less";
-
 @import "blocks/page-footer.less";
 @import "blocks/social-links.less";
 @import "blocks/map.less";
 
-@import "blocks/posts-title.less";
-@import "blocks/posts-slogan.less";
+
+@import "blocks/posts.less";
+
 @import "blocks/posts-item.less";
 @import "blocks/filter.less";
 @import "blocks/filter-range.less";
