--- a/source/less/blocks/posts-item.less
+++ b/source/less/blocks/posts-item.less
@@ -1,31 +1,55 @@
 .posts-item {
-  &--grey {
-    background-color: @bg--grey;
-  }
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
 
-  &--amount {
-    color: @pink;
-    font-size: @font-size--small;
-    font-weight: @font-weight--regular;
-    line-height: @line-height--medium;
-  }
+.posts-item__wrapper {
+  margin-bottom: 20px;
+}
+
+.posts-item__wrapper--first-rait {
+  position: relative;
+  background-color: @bg--white;
 }
 
 .posts-item__img-wrapper {
+  // width: 280px;
+  height: 180px;
+}
+
+.posts-item__img-wrapper--first-rait {
+  width: 100%;
+  height: 137px;
   padding: 0;
-  margin: 0;
 }
 
 .posts-item__review {
-  padding: 20px;
+  padding: 15px 0 20px 18px;
+  text-align: left;
+}
+
+.posts-item__review--grey {
+  background-color: @bg--grey;
 }
 
 .posts-item__flag {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  padding: 9px 19px;
   color: @text--white;
   font-size: @font-size--small;
   font-weight: @font-weight--big;
   line-height: @line-height--medium;
   background-color: @pink;
+}
+
+.posts-item__image {
+  background-size: cover;
 }
 
 .posts-item__name {
@@ -40,11 +64,19 @@
   font-size: @font-size--small;
   font-weight: @font-weight--light;
   line-height: @line-height--medium;
+  flex-shrink: 3;
 }
 
 .posts-item__blockquote {
   color: @grey--dark;
   font-size: @font-size--reg;
+  font-weight: @font-weight--regular;
+  line-height: @line-height--medium;
+}
+
+.posts-item__like--amount {
+  color: @pink;
+  font-size: @font-size--small;
   font-weight: @font-weight--regular;
   line-height: @line-height--medium;
 }
