--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,29 +1,44 @@
 .features {
-  padding: 50px 20px 0;
+  // padding: 50px 20px 0;
   background: @bg--grey;
-  text-align: center;
+  // text-align: center;
   border: 1px solid red;
 }
 
 @media (min-width: @tablet-width) {
   .features {
     position: relative;
-    padding: 15px 5% 40px 50%;
+    // padding: 15px 5% 40px 50%;
     text-align: left;
   }
 }
 
 @media (min-width: @desktop-width) {
   .features {
+    // display: flex;
+    // justify-content: space-between;
+    // padding: 0 10% 10px;
+    // text-align: center;
+  }
+  .features__wrapper {
     display: flex;
     justify-content: space-between;
-    padding: 0 10% 10px;
-    text-align: center;
   }
+
 }
+
 
 .features__item {
   margin-bottom: 30px;
+
+  @media (min-width: @desktop-width) {
+    // flex: 1;
+    // flex-basis: 33.3%;
+    // width: 33.3%;
+    // flex-shrink: 0;
+    flex-basis: 257px;
+  }
+
 }
 
 .features__title {
