--- a/source/less/blocks/filter-range.less
+++ b/source/less/blocks/filter-range.less
@@ -11,8 +11,8 @@
   // font-size: 0;
 }
 
-.filter-range__btn--post,
-.filter-range__btn--cancel {
+.filter-range__btn-post,
+.filter-range__btn-cancel {
   width: 280px;
   color: @pink;
   font-size: @font-size--big;
