--- a/source/less/blocks/posts-item.less
+++ b/source/less/blocks/posts-item.less
@@ -15,15 +15,8 @@
   background-color: @bg--white;
 }
 
-.posts-item__img-wrapper {
-  // width: 280px;
-  height: 180px;
-}
-
 .posts-item__img-wrapper--first-rait {
-  width: 100%;
   height: 137px;
-  padding: 0;
 }
 
 .posts-item__review {
@@ -38,7 +31,6 @@
 .posts-item__flag {
   position: absolute;
   content: "";
-  top: 0;
   left: 50%;
   padding: 9px 19px;
   color: @text--white;
@@ -48,9 +40,9 @@
   background-color: @pink;
 }
 
-.posts-item__image {
-  background-size: cover;
-}
+// .posts-item__image {
+//   background-size: cover;
+// }
 
 .posts-item__name {
   color: @black;
