--- a/source/less/blocks/proof.less
+++ b/source/less/blocks/proof.less
@@ -1,30 +1,35 @@
 .proof {
   display: none;
+  background-color: @bg--white;
 }
 
 @media (min-width: @tablet-width) {
   .proof {
     display: block;
+  }
+
+  .proof__wrapper {
     min-height: 360px;
-    padding: 95px 40px 55px 50%;
-    background: url("../img/icon-editor-diagram-fill.svg") 10% 55px no-repeat;
-    background-size: 260px auto;
+    padding: 90px 20px 0 47%;
+    background: url("../img/icon-editor-diagram-fill.svg") 0 125px no-repeat;
+    background-size: 230px auto;
+  }
+
+  .proof__content {
+    text-align: left;
   }
 }
 
 @media (min-width: @desktop-width) {
   .proof {
-    min-height: 470px;
-    padding: 0 10%;
     background-color: @bg--grey;
-    background-position: 14% 45%;
-    background-size: 305px auto;
+    min-height: 450px;
   }
-}
 
-.proof__content {
-  @media (min-width: @desktop-width) {
-    padding: 150px 0 0 40%;
+  .proof__wrapper {
+    padding: 90px 20px 0 45%;
+    background-position: 10% 45%;
+    background-size: 300px auto;
   }
 }
 
