--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -1,5 +1,5 @@
-.slider {
-  text-align: center;
-  position: relative;
-  width: 100%;
-}
+// .slider {
+//   text-align: center;
+//   position: relative;
+//   width: 100%;
+// }
