--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,21 +1,6 @@
-.page-footer {
+.page-footer__wrapper {
   display: none;
   border: 1px solid green;
-}
-
-@media (min-width: @tablet-width) {
-  .page-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 35px 40px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .page-footer {
-    padding: 70px 10%;
-  }
 }
 
 .page-footer__logo {
@@ -28,26 +13,24 @@
   background-size: 145px auto;
 }
 
-@media (min-width: @desktop-width) {
-  .page-footer__logo {
-    margin-left: 10px;
-    // background-image: url("../img/logo-pink-blue-mobile.svg");
-  }
-}
-
 .page-footer__copyright {
   font-size: @font-size--reg;
   line-height: 18px;
   color: @grey--dark;
 }
 
-.page-footer--photo {
-  min-height: 284px;
-  display: flex;
-  // flex-direction: column;
-  // justify-content: center;
+@media (min-width: @tablet-width) {
+  .page-footer__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+  }
 }
 
-.footer-photo__logo--photo {
-  align-self: center;
+@media (min-width: @desktop-width) {
+  .page-footer__wrapper {
+    padding: 60px 0;
+  }
 }
