--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,17 +1,15 @@
-.page-intro {
-  text-align: center;
-  position: relative;
-}
+// .page-intro {
+//   position: relative;
+// }
 
-.page-intro__wrapper {
+.page-intro__image {
   min-height: 460px;
   background: url("../img/iphone-hand-mobile@1x.png") 50% 175px no-repeat, url("../img/bg-back-mobile@1x.jpg") 50% 0 no-repeat;
   background-size: contain, cover;
-  border: 1px solid red;
 }
 
 @media (min-width: @tablet-width) {
-  .page-intro__wrapper {
+  .page-intro__image {
     min-height: 725px;
     background: url("../img/iphone-hand-mobile@1x.png") 80% 100% no-repeat, url("../img/bg-back-mobile@1x.jpg") 50% 100% no-repeat;
     background-size: 490px, cover;
@@ -20,7 +18,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-intro__wrapper {
+  .page-intro__image {
     min-height: 855px;
     background: url("../img/iphone-hand-mobile@1x.png") 75% 100% no-repeat, url("../img/bg-back-mobile@1x.jpg") 50% 50% no-repeat;
     background-size: 580px, cover;
@@ -35,7 +33,6 @@
 
 @media (min-width: @tablet-width) {
   .page-intro__title {
-    padding: 200px 50% 0 0;
     font-size: @line-height--xxxl;
     line-height: 50px;
   }
@@ -43,11 +40,13 @@
 
 @media (min-width: @desktop-width) {
   .page-intro__title {
-    padding: 220px 0 0;
     font-size: 50px;
     line-height: 60px;
-    max-width: 300px;
     text-align: center;
-    margin: 0 10px;
   }
+}
+
+.page-intro__wrapper {
+  padding-top: 200px;
+  width: 300px;
 }
