--- a/source/less/blocks/filter-range.less
+++ b/source/less/blocks/filter-range.less
@@ -11,8 +11,8 @@
   // font-size: 0;
 }
 
-.filter-range__btn-post,
-.filter-range__btn-cancel {
+.filter-range__btn-cancel,
+.filter-range__btn-post {
   width: 280px;
   color: @pink;
   font-size: @font-size--big;
@@ -22,4 +22,38 @@
   padding: 12px 35px;
   border-radius: 50px;
   border: 2px solid @pink;
+}
+
+.filter-range__btn-post {
+  margin-bottom: 12px;
+}
+
+@media (min-width: @tablet-width) {
+  .filter-range__controls {
+    flex-direction: column;
+    margin-top: 145px;
+  }
+
+  .filter-range__btn {
+    // justify-content: flex-end;
+  }
+
+  .filter-range__btn-post {
+    margin-bottom: 24px;
+    margin-top: 100px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .filter-range__btn {
+    display: flex;
+    flex-direction: row;
+    // justify-content: space-between;
+  }
+
+  .filter-range__btn-cancel,
+  .filter-range__btn-post {
+    width: 183px;
+    margin: 169px 0 0;
+  }
 }
