Только моб и таб готов для form.html

--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -1,13 +1,15 @@
 .page-title {
+  margin-top: -40px;
   padding-top: 240px;
   background-color: @bg--dark;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
 }
 
 .page-title__heading {
+  padding-bottom: 50px;
   color: @text--white;
   font-size: @font-size--h2;
   font-weight: @font-weight--light;
