--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,12 +27,12 @@
 
 
 @import "blocks/posts.less";
-
 @import "blocks/posts-item.less";
 @import "blocks/filter.less";
 @import "blocks/filter-range.less";
 @import "blocks/copyright.less";
-
 @import "blocks/page-title.less";
 @import "blocks/form.less";
+@import "blocks/platform.less";
+
 @import "blocks/popup.less";
