--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -9,6 +9,8 @@
 @bg--dark:                  #1d2631;
 @bg--grey:                  #f2f2f2;
 
+@border-bg:                 #e5e5e5;
+
 @font-family--base:         "Open Sans", "Helvetica", "Arial", sans-serif;
 
 @html-size--base:           16px;
