--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,11 +1,22 @@
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
 .form__description {
+  padding-bottom: 20px;
   color: @grey--dark;
   font-size: @font-size--reg;
   font-weight: @font-weight--regular;
   line-height: @line-height--large;
 }
 
+.form__description--hidden {
+  font-size: 0;
+}
+
 .form__title {
+  text-transform: uppercase;
   color: @pink;
   font-size: @font-size--reg;
   font-weight: @font-weight--regular;
@@ -13,6 +24,12 @@
 }
 
 .form__input {
+  width: 100%;
+  // height: 60px;
+  padding: 12px 20px;
+  border: 1px solid @border-bg;
+  border-radius: 2px;
+  box-sizing: border-box;
   color: @grey--dark;
   font-size: @font-size--big;
   font-weight: @font-weight--regular;
@@ -20,17 +37,26 @@
 }
 
 .form__fieldset {
+  padding: 0;
+  margin: 0;
   border: none;
+  // background-color: @bg--grey;
+}
+
+.form__section--grey {
   background-color: @bg--grey;
 }
 
 .form__btn {
+  border: 0;
+  min-width: 276px;
+  min-height: 60px;
+  margin-bottom: 21px;
   color: @text--white;
   font-size: @font-size--big;
   font-weight: @font-weight--big;
   line-height: @line-height--large;
   background-color: @green;
-  border: none;
   text-transform: uppercase;
 }
 
@@ -39,4 +65,80 @@
   font-size: @font-size--reg;
   font-weight: @font-weight--regular;
   line-height: @line-height--large;
+}
+
+.form__section {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__title--name {
+  display: block;
+  margin-bottom: 5px;
+  margin-left: 20px;
+  text-align: left;
+}
+
+.form-list {
+  padding: 0;
+  list-style: none;
+  text-align: left;
+}
+
+.form__star {
+  color: @pink;
+}
+
+@media (min-width: @tablet-width) {
+  .form__description {
+    font-size: @font-size--big;
+    font-weight: @font-weight--regular;
+    line-height: @line-height--large;
+  }
+
+  .form__description--hidden {
+    font-size: @font-size--big;
+    font-weight: @font-weight--regular;
+    line-height: @line-height--large;
+  }
+
+  .form__wrapper--name {
+    order: -5;
+  }
+
+  .form__section--info {
+    order: -1;
+  }
+
+  .form__group--name {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .form__title--name {
+    margin-right: 20px;
+    // margin-bottom: 55px;
+  }
+
+  .form__fieldset {
+    padding: 12px 20px;
+    border: 1px solid @border-bg;
+    border-radius: 2px;
+  }
+
+  .form__section--grey {
+    background-color: @bg--white;
+  }
+
+  .form__group--info {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .form__wrapper--submit {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
